--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body style="margin:0;padding:0;" >
 <div style="text-align:right">
 </div>
-<iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed/v1/place?q=39.750480,37.015058&key=AIzaSyBmKTe5T1h3e6cUhngLRXpzd4H6Yjys41k&zoom=17"> </iframe>
+<iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed/v1/place?q=39.750480,37.015058AIzaSyAOVYRIgupAurZup5y1PRh8Ismb1A3lLao&zoom=19"> </iframe>
 </body>
 </html>
